# GDG_Jam-2023-2

./: .gitignore  LICENSE  err.txt  pyproject.toml
chrono/: __main__.py  chrono.py  input.py  nav.py  window.py
chrono/game/: collider.py  element.py  game_view.py  gif.py  lerp.py  physics.py  physics_view.py
chrono/menus/: main_menu.py  win_menu.py
chrono/unused/: combat.py  game_view.py
resources/: __init__.py
resources/shaders/: vhs.glsl
